--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -221,11 +221,11 @@
   "origin.touhouorigins.amanojaku.description": "The J",
 
   "power.touhouorigins.turnabout.name": "Turnabout",
-  "power.touhouorigins.turnabout.description": "The J",
+  "power.touhouorigins.turnabout.description": "",
   "power.touhouorigins.this_side_down.name": "This Side Down",
-  "power.touhouorigins.this_side_down.description": "The J",
+  "power.touhouorigins.this_side_down.description": "",
   "power.touhouorigins.mirror_movement.name": "Mirror Movement",
-  "power.touhouorigins.mirror_movement.description": "The J",
+  "power.touhouorigins.mirror_movement.description": "",
 
   "touhouorigins.subtitles.entity.fairy.heal": "Fairy regenerates",
   "touhouorigins.subtitles.entity.fairy.fly": "Fairy flutters",
