Change Amanojaku's description

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -218,7 +218,7 @@
   "power.touhouorigins.my_apocalypse.description": "As long as your Decay meter is not half full, you can activate your special ability and go into a total core meltdown. Firing flames in all directions and ending with a massive explosion around you. Afterwards, your Decay meter will fill itself entirely.",
 
   "origin.touhouorigins.amanojaku.name": "Amanojaku",
-  "origin.touhouorigins.amanojaku.description": "The J",
+  "origin.touhouorigins.amanojaku.description": "Amanojaku are a particularly twisted type of youkai. They're the spirits of contradiction and perversity.",
 
   "power.touhouorigins.turnabout.name": "Turnabout",
   "power.touhouorigins.turnabout.description": "",
