--- a/src/main/resources/assets/touhouorigins/lang/fi_fi.json
+++ b/src/main/resources/assets/touhouorigins/lang/fi_fi.json
@@ -218,7 +218,7 @@
   "power.touhouorigins.my_apocalypse.description": "Niin kauan kuin hajoamismittarisi ei ole puoliksi täynnä, voit aktivoida erikoiskykysi ja aloittaa totaalisen ytimen sulamisen. Ammut liekkejä joka suuntaan ja lopuksi ympärilläsi tapahtuu valtava räjähdys. Sen jälkeen hajoamismittarisi täyttyy kokonaan.",
 
   "origin.touhouorigins.amanojaku.name": "Amanojaku",
-  "origin.touhouorigins.amanojaku.description": "The J",
+  "origin.touhouorigins.amanojaku.description": "Amanojakut ovat erityisen kieroutunut youkai-tyyppi. Ne ovat ristiriitaisuuden ja kierouden henkiä.",
 
   "power.touhouorigins.turnabout.name": "Täyskäännös",
   "power.touhouorigins.turnabout.description": "",
