--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -228,7 +228,7 @@
   "power.touhouorigins.mirror_movement.description": "",
 
   "origin.touhouorigins.kurayami.name": "Kurayami",
-  "origin.touhouorigins.kurayami.description": "Kurayami are a category of wicked youkai capable of manipulating darkness. Although they are known to devour humans, most kurayami and susceptible to their own powers and are too simple minded to commit such acts. It's thought that these youkai were once very strong creatures whose true powers vanished long ago.",
+  "origin.touhouorigins.kurayami.description": "Kurayami are a category of wicked youkai capable of manipulating darkness. Although they are known to devour humans, most kurayami are susceptible to their own powers and are too simple minded to commit such acts. It's thought that these youkai were once very strong creatures whose true powers vanished long ago.",
 
   "power.touhouorigins.midnight_bird.name": "Midnight Bird",
   "power.touhouorigins.midnight_bird.description": "You have the ability to soar like a bird but will fall if hurt. You can float in position by holding shift.",
