Prepare Kurayami for next release

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -228,18 +228,18 @@
   "power.touhouorigins.mirror_movement.description": "",
 
   "origin.touhouorigins.kurayami.name": "Kurayami",
-  "origin.touhouorigins.kurayami.description": "Kurayami are a category of wicked youkai capable of manipulating darkness. Although they are known to devour humans, most kurayami are susceptible to their own powers and are too simple minded to commit such acts. It's thought that these youkai were once very strong creatures whose true powers vanished long ago.",
+  "origin.touhouorigins.kurayami.description": "Kurayami are a category of wicked youkai capable of manipulating darkness. Although they are known to devour humans, most kurayami are susceptible to their own powers and are too simple-minded to commit such acts. It's thought that these youkai were once very strong creatures whose true powers vanished long ago.",
 
   "power.touhouorigins.midnight_bird.name": "Midnight Bird",
-  "power.touhouorigins.midnight_bird.description": "You have the ability to soar like a bird but will fall if hurt. You can float in position by holding shift.",
-  "power.touhouorigins.is_that_so.name": "So Nanoka?~",
-  "power.touhouorigins.is_that_so.description": "Every 30 seconds, you can spend some hunger to release a cloud of darkness that will extinguish and blind everyone nearby for 5 seconds including yourself.",
+  "power.touhouorigins.midnight_bird.description": "You have the ability to soar like a bird but will fall if hurt. You can float in place by sneaking.",
+  "power.touhouorigins.is_that_so.name": "So Nanoka~?",
+  "power.touhouorigins.is_that_so.description": "Every 30 seconds, you can spend some hunger points to release a cloud of darkness that will extinguish and blind everyone nearby for 5 seconds including yourself.",
   "power.touhouorigins.chomp.name": "Chomp!",
-  "power.touhouorigins.chomp.description": "You can chomp on any mob or player under the effects of \"So Nanoka?~\" by attacking with your bare fists. Chomped victims will directly lose 2 full hearts of health and you will be given 4 absorption hearts. If the victim is killed, your hunger and health will also be completely restored.",
+  "power.touhouorigins.chomp.description": "You can chomp on any mob or player under the effects of \"So Nanoka~?\" by attacking with your bare fists. Chomped victims will directly lose 2 hearts of health and you will be given 4 absorption hearts. If the victim is killed, your hunger points and health will also be completely restored.",
   "power.touhouorigins.light_absorption.name": "Light Absorption",
-  "power.touhouorigins.light_absorption.description": "You hate being exposed to the sun and heat, and subconsciously surround yourself in darkness to cool off. When exposed to direct sunlight or in the nether, you are afflicted with darkness. Others will see you as a black sphere in this state.",
+  "power.touhouorigins.light_absorption.description": "You hate being exposed to the sun and heat, and subconsciously surround yourself in darkness to cool off. When exposed to direct sunlight or in the Nether, you are afflicted with darkness. Others will see you as a black sphere in this state.",
   "power.touhouorigins.crude_appetite.name": "Crude Appetite",
-  "power.touhouorigins.crude_appetite.description": "You relish the taste of raw meat, it's almost as good as eating a live human! Eating raw meat gives 75% more hunger, while all other foods give 50% less hunger.",
+  "power.touhouorigins.crude_appetite.description": "You relish the taste of raw meat, it's almost as good as eating a live human! Eating raw meat gives 75% more hunger points, while all other foods give 50% less.",
   "power.touhouorigins.mysterious_seal.name": "Mysteriously Sealed",
   "power.touhouorigins.mysterious_seal.description": "An unknown seal envelops your body and soul. You have 5 less hearts of health and you're 20% smaller. Perhaps there is some way to break it?",
 
