--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -244,12 +244,10 @@
   "power.touhouorigins.mysterious_seal.description": "An unknown seal envelops your body and soul. You have 5 less hearts of health and you're 20% smaller. Perhaps there is some way to break it?",
 
   "origin.touhouorigins.tsukumogami.name": "Tsukumogami",
-  "origin.touhouorigins.tsukumogami.description": "Tsukumogami desc **** ",
+  "origin.touhouorigins.tsukumogami.description": "Tsukumogami are sentient spirits of abandoned tools or objects that animate to take vengeance on those who have mistreated and neglected them. Most tsukumogami are known to be spiteful of humans, though their actual dangerousness depends on how they were used and treated before being abandoned.",
 
   "power.touhouorigins.choose_your_tool.name": "You Tool",
   "power.touhouorigins.choose_your_tool.description": "You are a tool, literally, at least you don't have to look like one. After choosing this origin, you will be prompted to choose the object you inhabit. This object will have a special ability associated to it, is bound to you, and cannot break. You must carry it at all times.",
-  "power.touhouorigins.boo.name": "Boo!",
-  "power.touhouorigins.boo.description": "You love surprising others, you could just do it all day! Every minute, you can become completely invisible. Any action or movement done while under the effect will do something **** .",
   "power.touhouorigins.artisan_of_animacy.name": "Artisan of Animacy",
   "power.touhouorigins.artisan_of_animacy.description": "You are devoted to your craft and can imbue otherwise mundane objects with phantasmic characteristics, making them more powerful at the expense of being more alive. Using a smithing table while sneaking will give your held item a random applicable enchantment along with curse of the vanishing.",
   "power.touhouorigins.little_smithy.name": "Little Smithy",
@@ -279,6 +277,12 @@
   "touhouorigins.subtitles.entity.kurayami.flight": "Kurayami whooshes",
   "touhouorigins.subtitles.entity.kurayami.darkness": "Darkness gathers",
   "touhouorigins.subtitles.entity.kurayami.chomp": "Kurayami chomps",
+  "touhouorigins.subtitles.entity.fukuro.gap_upgrade": "Pouch tears",
+  "touhouorigins.subtitles.entity.fukuro.bag_open": "Pouch opens",
+  "touhouorigins.subtitles.entity.exfukuro.bag_open": "Gap opens",
+  "touhouorigins.subtitles.entity.karakasa.escape": "Karakasa whooshes",
+  "touhouorigins.subtitles.entity.menreiki.swap": "Swaps mask",
+  "touhouorigins.subtitles.entity.menreiki.thorns": "Damage reflects",
 
   "death.attack.sun": "%1$s was vaporized",
   "death.attack.sun.player": "%1$s was vaporized whilst fighting %2$s",
@@ -299,40 +303,59 @@
   "power.touhouorigins.ostracized.trade": "The %1$s refuses to trade with you",
   "power.touhouorigins.my_apocalypse_alert": "Total core meltdown in progress... Evacuate the area!",
   "power.touhouorigins.midnight_bird_cooldown": "You are still recovering from being hurt!",
+  "power.touhouorigins.menreiki_kitsune": "Kitsune",
+  "power.touhouorigins.menreiki_fuku_no_kami": "Fuku no kami",
+  "power.touhouorigins.menreiki_Uba": "Uba",
+
+
+  "item.touhouorigins.tsukumogami_chochin_name": "Chōchin",
+  "item.touhouorigins.tsukumogami_fukuro_name": "Fukuro",
+  "item.touhouorigins.tsukumogami_fukuro_ex_name": "EX-Fukuro",
+  "item.touhouorigins.tsukumogami_karakasa_name": "Karakasa",
+  "item.touhouorigins.tsukumogami_menreiki_kitsune_name": "Kitsune mask",
+  "item.touhouorigins.tsukumogami_menreiki_fuku_no_kami_name": "Fuku no kami mask",
+  "item.touhouorigins.tsukumogami_menreiki_Uba_name": "Uba mask",
+  "item.touhouorigins.tsukumogami_bound_one": "This item is a part of your being,",
+  "item.touhouorigins.tsukumogami_bound_two": "you cannot drop it or store it",
+  "item.touhouorigins.tsukumogami_bound_three": "in any external inventories.",
+
+  "touhouorigins.gui.badge.upgrade": "Upgrade path",
 
   "layer.touhouorigins.tsukumogami_tool.name": "Tsukumogami",
   "layer.touhouorigins.tsukumogami_tool.missing_origin.name": "Unknown",
   "layer.touhouorigins.tsukumogami_tool.missing_origin.description": "You have not identified yourself yet.",
 
-  "origin.touhouorigins.chochin.name": "Chōchin",
-  "origin.touhouorigins.chochin.description": "Your spirit's manifestation is a lantern, shining ever so brightly.",
+  "origin.touhouorigins.tsukumogami_chochin.name": "Chōchin",
+  "origin.touhouorigins.tsukumogami_chochin.description": "Your spirit's manifestation is a lantern, shining ever so brightly.",
 
   "power.touhouorigins.tsukumogami_chochin.name": "A Light in the Darkness",
-  "power.touhouorigins.tsukumogami_chochin.description": "You are afflicted with glowing, allowing others nearby to see you through walls. You are also immune to blinding effects. Your Chōchin must be held in your hand for these powers to take effect.",
+  "power.touhouorigins.tsukumogami_chochin.description": "When held, you are afflicted with night vision and glowing, allowing others nearby to see you through walls. You are also immune to blinding effects.",
 
-  "origin.touhouorigins.fukuro.name": "Fukuro",
-  "origin.touhouorigins.fukuro.description": "Your spirit's manifestation is a bag, **** ",
+  "origin.touhouorigins.tsukumogami_fukuro.name": "Fukuro",
+  "origin.touhouorigins.tsukumogami_fukuro.description": "Your spirit's manifestation is a fairly unremarkable pouch. At least it's practical.",
+  "origin.touhouorigins.tsukumogami_fukuro.announcement": "You stare into the void, and a part of your soul tears open as thousands of eyes stare back. You felt everything, and then nothing.",
 
-  "power.touhouorigins.tsukumogami_fukuro.name": "Big Bag",
-  "power.touhouorigins.tsukumogami_fukuro.description": "You have a secondary inventory. Your Fukuro must either be held in your hand or equipped onto your head to access its inventory. If you are not wearing any helmet, your Fukuru will automatically equip when using your ability key.",
+  "power.touhouorigins.tsukumogami_fukuro.name": "Little Treasures",
+  "power.touhouorigins.tsukumogami_fukuro.description": "When held or equipped onto your head, you have access to a secondary inventory containing nine slots. This inventory is bound to your soul and does not drop on death.",
 
-  "origin.touhouorigins.exfukuro.name": "EX Fukuro",
-  "origin.touhouorigins.exfukuro.description": "Fukuru upgrade path **** ",
+  "power.touhouorigins.tsukumogami_fukuro_ex.name": "Pushing Boundaries",
+  "power.touhouorigins.tsukumogami_fukuro_ex.description": "Others are impressed with your practicality, but what if you could store even more? If desired, you can use an eye of ender to manipulate your fukuro. If done, you will lose access to your secondary inventory, and instead will be able to interact with your ender chest storage at any time. This effect cannot be reversed.",
 
-  "power.touhouorigins.tsukumogami_exfukuro.name": "Gap Bag",
-  "power.touhouorigins.tsukumogami_exfukuro.description": "Instead of having a small internal inventory space, you instead access your ender chest.",
+  "origin.touhouorigins.tsukumogami_fukuro_ex.name": "EX-Fukuro",
+  "origin.touhouorigins.tsukumogami_fukuro_ex.description": "Imbued with a strange power, your Fukuro now is a gateway to a strange dimension, allowing you to store many more items inside of it.",
 
-  "origin.touhouorigins.karakasa.name": "Karakasa",
-  "origin.touhouorigins.karakasa.description": "You are an umbrella, graceful, yet powerful.",
+  "power.touhouorigins.gap_bag.name": "Gap Bag",
+  "power.touhouorigins.gap_bag.description": "When held or equipped onto your head, you can access your ender chest at any time.",
+
+  "origin.touhouorigins.tsukumogami_karakasa.name": "Karakasa",
+  "origin.touhouorigins.tsukumogami_karakasa.description": "You are a small umbrella, nimble and fleeting.",
 
   "power.touhouorigins.tsukumogami_karakasa.name": "Graceful Little Parasol",
-  "power.touhouorigins.tsukumogami_karakasa.description": "When held, you are granted slow falling, and are given increased knockback damage.",
+  "power.touhouorigins.tsukumogami_karakasa.description": "When held, you are granted slow falling. Attacking other mobs with your Karakasa will launch you into the air, allowing for quick escapes.",
 
-  "origin.touhouorigins.menreiki.name": "Menreiki",
-  "origin.touhouorigins.menreiki.description": "You are a collective of masks.",
+  "origin.touhouorigins.tsukumogami_menreiki.name": "Menreiki",
+  "origin.touhouorigins.tsukumogami_menreiki.description": "You are a collective of masks, burning with emotion.",
 
-  "power.touhouorigins.tsukumogami_menreiki.name": "All is You",
-  "power.touhouorigins.tsukumogami_menreiki.description": "When equipped, you can cycle between three states of emotion: **** Fuku no kami(dropper mask, humor, laughter). Kitsune: (observer mask) Anyone you directly look at can be tracked through walls. Uba(dispenser mask, pathos, melancholy)."
-
-  "touhouorigins.gui.badge.upgrade": "Upgrade path"
+  "power.touhouorigins.tsukumogami_menreiki.name": "A Hopeful Masquerade",
+  "power.touhouorigins.tsukumogami_menreiki.description": "When equipped onto your head, you can cycle between three states of emotion:\nKitsune:\nAnyone you directly look at will glow, allowing you to keep track of their position through terrain.\nFuku no kami:\nPositive status effects inflicted onto you will last longer, while neutral and negative effects will disappear more quickly.\nUba:\nWhen attacked, you will reflect some of the damage back towards your attacker, similar to having thorns."
 }
