--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -305,7 +305,7 @@
   "power.touhouorigins.midnight_bird_cooldown": "You are still recovering from being hurt!",
   "power.touhouorigins.menreiki_kitsune": "Kitsune",
   "power.touhouorigins.menreiki_fuku_no_kami": "Fuku no kami",
-  "power.touhouorigins.menreiki_Uba": "Uba",
+  "power.touhouorigins.menreiki_uba": "Uba",
 
 
   "item.touhouorigins.tsukumogami_chochin_name": "Chōchin",
@@ -314,7 +314,7 @@
   "item.touhouorigins.tsukumogami_karakasa_name": "Karakasa",
   "item.touhouorigins.tsukumogami_menreiki_kitsune_name": "Kitsune mask",
   "item.touhouorigins.tsukumogami_menreiki_fuku_no_kami_name": "Fuku no kami mask",
-  "item.touhouorigins.tsukumogami_menreiki_Uba_name": "Uba mask",
+  "item.touhouorigins.tsukumogami_menreiki_uba_name": "Uba mask",
   "item.touhouorigins.tsukumogami_bound_one": "This item is a part of your being,",
   "item.touhouorigins.tsukumogami_bound_two": "you cannot drop it or store it",
   "item.touhouorigins.tsukumogami_bound_three": "in any external inventories.",
